--- a/src/style.css
+++ b/src/style.css
@@ -43,3 +43,18 @@ form {
 	font-size: 12px;
 	padding: 5px;
 }
+
+.loader {
+	border: 6px solid #f3f3f3; /* Light grey */
+    border-top: 6px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 10px;
+    height: 10px;
+    animation: spin 2s linear infinite;
+    margin: 0 auto;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
