--- a/src/style.css
+++ b/src/style.css
@@ -17,8 +17,8 @@ body {
 
 #title {
 	text-align: center;
-	height: 150px;
-	line-height: 175px;
+	height: 115px;
+	line-height: 135px;
 	font-weight: bold;
 	font-size: 24px;
 }
@@ -30,7 +30,7 @@ form {
 }
 
 #prediction {
-	padding: 45px;
+	padding: 30px;
 	text-align: center;
 	font-size: 20px;
 	min-height: 25px;
@@ -42,6 +42,21 @@ form {
 	text-align: center;
 	font-size: 12px;
 	padding: 5px;
+	clear: both;
+}
+
+#weight_table {
+	display: inline-block;
+	float: right;
+	width: 50%;
+	text-align: center;
+	font-size: 14px;
+}
+
+#form_content {
+	display: inline-block;
+	float: left;
+	width: 50%;
 }
 
 .loader {
